Initial commit - adjust build and release